<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParticipantProfileActivity" >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_user"
        android:maxHeight="100dp"
        android:maxWidth="100dp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="15dp"
        android:text="@string/hint_username" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="5dp"
        android:text="@string/profile_country" />
    
    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCountry"
        android:layout_below="@+id/tvCountry"
        android:layout_marginTop="5dp"
        android:text="@string/profile_city" />

    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCity"
        android:layout_below="@+id/tvCity"
        android:layout_marginTop="5dp"
        android:text="@string/profile_email_address" />

    <TextView
        android:id="@+id/tvFirstAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmailAddress"
        android:layout_below="@+id/tvEmailAddress"
        android:layout_marginTop="5dp"
        android:text="@string/profile_first_access" />

    <TextView
        android:id="@+id/tvLastAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFirstAccess"
        android:layout_below="@+id/tvFirstAccess"
        android:layout_marginTop="5dp"
        android:text="@string/profile_last_access" />

</RelativeLayout>