<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <TextView
	        android:id="@+id/tvAboutContent1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about_content_1" />

	    <TextView
	        android:id="@+id/tvAboutServerTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvAboutContent1"
	        android:layout_below="@id/tvAboutContent1"
	        android:layout_marginTop="20dp"
	        android:text="@string/about_server_title"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/title" />
	    
	    <TextView
	        android:id="@+id/tvAboutServerContent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvAboutServerTitle"
	        android:layout_below="@id/tvAboutServerTitle"
	        android:layout_marginTop="10dp"
	        android:text="@string/about_server_content" />

	    <TextView
	        android:id="@+id/tvAboutServerLink"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvAboutServerContent"
	        android:layout_below="@+id/tvAboutServerContent"
	        android:autoLink="web"
	        android:linksClickable="true"
	        android:text="@string/about_server_link" />
	    
	    <TextView
	        android:id="@+id/tvAboutContent2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/tvAboutServerLink"
	        android:layout_below="@id/tvAboutServerLink"
	        android:layout_marginTop="30dp"
	        android:text="@string/about_content_2" />
        
    </RelativeLayout>
    
</ScrollView>