<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UploadActivity" >

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/etPath"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvDesc"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_file_path"
        android:imeOptions="actionGo"
        android:maxLines="1"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bUpload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPath"
        android:layout_marginTop="10dp"
        android:text="@string/button_upload" />
    
    <ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/bUpload"
	    android:layout_marginTop="10dp" />
    
	<TextView
		android:id="@android:id/empty"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:textColor="#000000"
	    android:layout_below="@+id/bUpload"
	    android:layout_marginTop="10dp"
	    android:text="@string/response_empty_data" />

</RelativeLayout>