<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResourceDetailActivity" >

    <TextView
        android:id="@+id/tvDescContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDescContent"
        android:layout_below="@+id/tvDescContent"
        android:layout_marginTop="20dp"
        android:text="@string/resource_type"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTypeContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvType"
        android:layout_below="@+id/tvType"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTypeContent"
        android:layout_below="@+id/tvTypeContent"
        android:layout_marginTop="20dp"
        android:text="@string/resource_date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_below="@+id/tvDate"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/tvComponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDateContent"
        android:layout_below="@+id/tvDateContent"
        android:layout_marginTop="20dp"
        android:text="@string/resource_component"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvComponentContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_below="@+id/tvComponent"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvComponentContent"
        android:layout_below="@+id/tvComponentContent"
        android:layout_marginTop="25dp"
        android:text="@string/resource_author"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAuthorContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAuthor"
        android:layout_below="@+id/tvAuthor"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/tvLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAuthorContent"
        android:layout_below="@+id/tvAuthorContent"
        android:layout_marginTop="20dp"
        android:text="@string/resource_license"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLicenseContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAuthorContent"
        android:layout_below="@+id/tvLicense"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/bDownload"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDescContent"
        android:layout_marginTop="20dp"
        android:text="@string/button_download" />

</RelativeLayout>